objects/QIDC__MDM_Merge_Object_ims__c.object
<CustomObject>
    <description>This Object is used to store the  MDM Merge events</description>
    <fields>
        <fullName>QIDC__Loser_SFID_ims__c</fullName>
        <description>This field is used to store Loser SFDC ID</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store Loser SFDC ID</inlineHelpText>
        <label>Loser SFID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Loser_URI_ims__c</fullName>
        <description>This field is used to store the loser Uri</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store the loser Uri</inlineHelpText>
        <label>Loser URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Status_ims__c</fullName>
        <description>This field is used to Store the Status of the merge record</description>
        <inlineHelpText>This field is used to Store the Status of the merge record</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Winner_SFID_ims__c</fullName>
        <description>This field is use to store Winner SFDC ID</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is use to store Winner SFDC ID</inlineHelpText>
        <label>Winner SFID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Winner_URI_ims__c</fullName>
        <description>This field is used to store winner Uri</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store winner Uri</inlineHelpText>
        <label>Winner URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MDM Merge Object</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM Merge Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>